<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearLoginPage"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_2">
        <LinearLayout android:gravity="start"
            android:id="@+id/linearGroup102"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_30pxv"
            android:layout_marginTop="@dimen/_28pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <TextView android:ellipsize="end" android:id="@+id/txtLogin"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text=""
                style="@style/txtIntersemibold30" tools:text="@string/lbl_login"/>
            <EditText android:ellipsize="end"
                android:hint="@string/lbl_email"
                android:id="@+id/etEmail"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_8pxh"
                android:layout_marginTop="@dimen/_82pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_16pxv"
                android:paddingStart="@dimen/_16pxh"
                android:paddingTop="@dimen/_17pxv"
                android:singleLine="true"
                android:text=""
                android:textColorHint="@color/gray_401" style="@style/etIntermedium16"/>
            <FrameLayout android:id="@+id/frameGroup105"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_50pxv"
                android:layout_marginEnd="@dimen/_9pxh"
                android:layout_marginStart="@dimen/_8pxh"
                android:layout_marginTop="@dimen/_48pxv" android:layout_width="@dimen/_406pxh">
                <ImageView android:id="@+id/imageBG"
                    android:layout_gravity="start"
                    android:layout_height="@dimen/_50pxh"
                    android:layout_width="match_parent"
                    android:scaleType="fitXY" android:src="@drawable/img_bg"/>
                <LinearLayout android:id="@+id/linearGroup96"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_15pxv"
                    android:layout_marginEnd="@dimen/_16pxh"
                    android:layout_marginStart="@dimen/_16pxh"
                    android:layout_marginTop="@dimen/_16pxv"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtPassword"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.64"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text=""
                        style="@style/txtIntermedium16" tools:text="@string/lbl_password"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtShow"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_256pxh"
                        android:layout_weight="0.36"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text=""
                        style="@style/txtIntermedium16_1" tools:text="@string/lbl_show"/>
                </LinearLayout>
            </FrameLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnLogIn"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_7pxh"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_140pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_16pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_16pxv"
                android:singleLine="true"
                android:text="@string/lbl_log_in2"
                android:textAllCaps="false"
                style="@style/btnSolidRounded" tools:text="@string/lbl_log_in2"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtForgotYourPas"
                android:layout_gravity="end"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_112pxh"
                android:layout_marginStart="@dimen/_133pxh"
                android:layout_marginTop="@dimen/_25pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text=""
                style="@style/txtIntersemibold16" tools:text="@string/msg_forgot_your_pas"/>
            <FrameLayout android:id="@+id/frameGroup107"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_137pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_52pxv" android:layout_width="@dimen/_373pxh">
                <ImageView android:id="@+id/imageRectangle12"
                    android:layout_gravity="start"
                    android:layout_height="@dimen/_80pxh"
                    android:layout_marginBottom="@dimen/_28pxv"
                    android:layout_marginEnd="@dimen/_14pxh"
                    android:layout_marginStart="@dimen/_14pxh"
                    android:layout_marginTop="@dimen/_28pxv"
                    android:layout_width="@dimen/_329pxh"
                    android:scaleType="fitXY" android:src="@drawable/img_rectangle12"/>
                <TextView android:id="@+id/txtCONTINUEWITHH"
                    android:layout_gravity="bottom|end"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_44pxv"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_44pxv"
                    android:layout_width="match_parent"
                    android:text=""
                    style="@style/txtUbuntubold15" tools:text="@string/msg_continue_with_h"/>
                <ImageView android:id="@+id/imageImage1"
                    android:layout_gravity="start"
                    android:layout_height="@dimen/_137pxh"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_width="@dimen/_124pxh"
                    android:scaleType="fitXY"
                    imageRes="@{@drawable/img_image1}" tools:src="@drawable/img_image1"/>
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
