<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearRegisterPage"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <LinearLayout android:gravity="start"
            android:id="@+id/linearGroup90"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_28pxv"
            android:layout_marginTop="@dimen/_33pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <TextView android:ellipsize="end"
                android:id="@+id/txtSignUp"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{registerPageVM.registerPageModel.txtSignUp}"
                style="@style/txtIntersemibold30" tools:text="@string/lbl_sign_up"/>
            <EditText android:ellipsize="end"
                android:hint="@string/lbl_name" android:id="@+id/etName"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_7pxh"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_43pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_16pxv"
                android:paddingStart="@dimen/_16pxh"
                android:paddingTop="@dimen/_17pxv"
                android:singleLine="true"
                android:text="@={registerPageVM.registerPageModel.etNameValue}"
                android:textColorHint="@color/gray_401" style="@style/etIntermedium16"/>
            <EditText android:ellipsize="end"
                android:hint="@string/lbl_email"
                android:id="@+id/etEmail"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_7pxh"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_43pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_16pxv"
                android:paddingStart="@dimen/_16pxh"
                android:paddingTop="@dimen/_17pxv"
                android:singleLine="true"
                android:text="@={registerPageVM.registerPageModel.etEmailValue}"
                android:textColorHint="@color/gray_401" style="@style/etIntermedium16"/>
            <FrameLayout android:id="@+id/frameGroup93"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_50pxv"
                android:layout_marginEnd="@dimen/_9pxh"
                android:layout_marginStart="@dimen/_8pxh"
                android:layout_marginTop="@dimen/_30pxv" android:layout_width="@dimen/_406pxh">
                <ImageView android:id="@+id/imageBG"
                    android:layout_gravity="start"
                    android:layout_height="@dimen/_50pxh"
                    android:layout_width="match_parent"
                    android:scaleType="fitXY" android:src="@drawable/img_bg"/>
                <LinearLayout android:id="@+id/linearGroup82"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_15pxv"
                    android:layout_marginEnd="@dimen/_16pxh"
                    android:layout_marginStart="@dimen/_16pxh"
                    android:layout_marginTop="@dimen/_16pxv"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtPassword"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.64"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@{registerPageVM.registerPageModel.txtPassword}"
                        style="@style/txtIntermedium16" tools:text="@string/lbl_password"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtShow"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_256pxh"
                        android:layout_weight="0.36"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@{registerPageVM.registerPageModel.txtShow}"
                        style="@style/txtIntermedium16_1" tools:text="@string/lbl_show"/>
                </LinearLayout>
            </FrameLayout>
            <EditText android:ellipsize="end"
                android:hint="@string/msg_confirm_passwor"
                android:id="@+id/etConfirmPasswor"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_9pxh"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_31pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_16pxv"
                android:paddingStart="@dimen/_9pxh"
                android:paddingTop="@dimen/_17pxv"
                android:singleLine="true"
                android:text="@={registerPageVM.registerPageModel.etConfirmPassworValue}"
                android:textColorHint="@color/gray_401" style="@style/etIntermedium16"/>
            <androidx.appcompat.widget.AppCompatCheckBox
                android:buttonTint="@color/gray_200"
                android:ellipsize="end" android:fontFamily="@font/inter"
                android:id="@+id/checkBoxGroup7"
                android:layout_gravity="end"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_48pxh"
                android:layout_marginTop="@dimen/_22pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@string/msg_i_would_like_to"
                android:textColor="@color/gray_700"
                android:textFontWeight="400"
                android:textSize="@dimen/_14pxh"
                android:textStyle="normal" tools:text="@string/msg_i_would_like_to"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnSignUp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_8pxh"
                android:layout_marginTop="@dimen/_50pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_21pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_16pxv"
                android:singleLine="true"
                android:text="@string/lbl_sign_up"
                android:textAllCaps="false"
                style="@style/btnSolidRounded" tools:text="@string/lbl_sign_up"/>
            <FrameLayout android:id="@+id/frameGroup95"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_137pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_22pxv" android:layout_width="@dimen/_373pxh">
                <ImageView android:id="@+id/imageRectangle12"
                    android:layout_gravity="start"
                    android:layout_height="@dimen/_80pxh"
                    android:layout_marginBottom="@dimen/_28pxv"
                    android:layout_marginEnd="@dimen/_14pxh"
                    android:layout_marginStart="@dimen/_14pxh"
                    android:layout_marginTop="@dimen/_28pxv"
                    android:layout_width="@dimen/_329pxh"
                    android:scaleType="fitXY" android:src="@drawable/img_rectangle12"/>
                <TextView android:id="@+id/txtCONTINUEWITHH"
                    android:layout_gravity="bottom|end"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_44pxv"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_44pxv"
                    android:layout_width="match_parent"
                    android:text="@{registerPageVM.registerPageModel.txtCONTINUEWITHH}"
                    style="@style/txtUbuntubold15" tools:text="@string/msg_continue_with_h"/>
                <ImageView android:id="@+id/imageImage1"
                    android:layout_gravity="start"
                    android:layout_height="@dimen/_137pxh"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_width="@dimen/_124pxh"
                    android:scaleType="fitXY"
                    imageRes="@{@drawable/img_image1}" tools:src="@drawable/img_image1"/>
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
