<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearGeneraldetails"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <LinearLayout android:gravity="start"
            android:id="@+id/linearGroup133"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginTop="@dimen/_33pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <TextView android:ellipsize="end"
                android:gravity="center_horizontal"
                android:id="@+id/txtGeneralDetails"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text=""
                style="@style/txtIntersemibold30" tools:text="@string/lbl_general_details"/>
            <EditText android:ellipsize="end"
                android:hint="@string/lbl_name" android:id="@+id/etName"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_7pxh"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_43pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_16pxv"
                android:paddingStart="@dimen/_16pxh"
                android:paddingTop="@dimen/_17pxv"
                android:singleLine="true"
                android:text=""
                android:textColorHint="@color/gray_401" style="@style/etIntermedium16"/>
            <EditText android:ellipsize="end"
                android:hint="@string/lbl_phone_number"
                android:id="@+id/etPhoneNumber"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_7pxh"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_30pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_16pxv"
                android:paddingStart="@dimen/_16pxh"
                android:paddingTop="@dimen/_17pxv"
                android:singleLine="true"
                android:text=""
                android:textColorHint="@color/gray_401" style="@style/etIntermedium16"/>
            <EditText android:ellipsize="end"
                android:hint="@string/lbl_state"
                android:id="@+id/etState"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_8pxh"
                android:layout_marginTop="@dimen/_30pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_16pxv"
                android:paddingStart="@dimen/_9pxh"
                android:paddingTop="@dimen/_17pxv"
                android:singleLine="true"
                android:text=""
                android:textColorHint="@color/gray_401" style="@style/etIntermedium16"/>
            <EditText android:ellipsize="end"
                android:hint="City"
                android:id="@+id/etCity"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_8pxh"
                android:layout_marginTop="@dimen/_30pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_16pxv"
                android:paddingStart="@dimen/_9pxh"
                android:paddingTop="@dimen/_17pxv"
                android:singleLine="true"
                android:text=""
                android:textColorHint="@color/gray_401" style="@style/etIntermedium16"/>
            <EditText android:ellipsize="end"
                android:hint="Address"
                android:id="@+id/etAddress"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_8pxh"
                android:layout_marginTop="@dimen/_30pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_16pxv"
                android:paddingStart="@dimen/_9pxh"
                android:paddingTop="@dimen/_17pxv"
                android:singleLine="true"
                android:text=""
                android:textColorHint="@color/gray_401" style="@style/etIntermedium16"/>

            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnNext"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_8pxh"
                android:layout_marginTop="@dimen/_84pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_21pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_16pxv"
                android:singleLine="true"
                android:text="Submit"
                android:textAllCaps="false"
                style="@style/btnSolidRounded" tools:text="@string/lbl_next"/>
        </LinearLayout>
    </LinearLayout>
</layout>
